<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddItem">


    <TextView
        android:id="@+id/tvdate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:gravity="center"
        android:hint="Date"
        android:inputType="none"
        android:textSize="18dp" />

    <TextView
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvtime"
        android:textSize="18dp"
        android:inputType="none"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_corners"
        android:ems="10"
        android:hint="Time" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvsys"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Systolic Pressure(mm Hg)" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvdias"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Diastolic Pressure(mm Hg)" />


    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvrate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Heart Rate(bpm)" />

    <EditText
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/tvcomment"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/rounded_corners"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="Comment" />

    <Button
        android:layout_width="200dp"
        android:id="@+id/btnsave"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners"
        android:layout_marginTop="24dp"
        android:text="Save" />

</LinearLayout>