<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3D4481"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/searchbar"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="#FFFFFF"
        android:drawableLeft="@drawable/ic_baseline_search_24"
        android:hint="Search by Date (ex 02/02/2020)"
        android:paddingLeft="10dp" />

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/searchbar">
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/RecyclerViewRecord"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/single_row">

    </androidx.recyclerview.widget.RecyclerView>
</ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnadd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:elevation="3dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="12dp"
        app:srcCompat="@drawable/add_button"
       />


</RelativeLayout>

